FIxing overflow issue

--- a/_sass/two-divs.sass
+++ b/_sass/two-divs.sass
@@ -144,6 +144,7 @@
         width: 100%
         position: absolute
         text-align: center
+        overflow-x: hidden
         .animate-para
             opacity: 0
             position: relative
@@ -183,6 +184,7 @@
         position: absolute
         top: 0%
         z-index: 7
+        overflow-x: hidden
     
     .behind-part
         height: 100vh
@@ -199,6 +201,7 @@
         top: 0%
         z-index: 2
         text-align: center
+        overflow-x: hidden
 
         h2
             margin-top: 70px
