--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -34,6 +34,8 @@ $baseurl: "{{ site.baseurl }}"
     padding: 0
     margin: 0
 
+html
+    overflow-x: hidden
 
 body
     background: #333
